--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Tiffany!</title>
+    <title>Happy Birthday Nase!</title>
     <link rel="stylesheet" href="style.css">
     
-    <meta property="og:title" content="Happy Birthday Tiffany!">
+    <meta property="og:title" content="Happy Birthday Nase!">
     <meta property="og:description" content="Put this simple webpage together. ^_^ <br>I'd suggest viewing it in landscape mode, preferably on a monitor and not a small phone screen. Also maybe use Chrome or similar browsers because when I opened it in Edge it significantly slowed down the Javascript execution rate. Probably some resource-saving thing.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Brainn11/TiffBD/main/Thumbnail.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Brainn11/NaseBD/main/Thumbnail.png">
     <meta property="og:type" content="video.other">
 </head>
 <body>
@@ -37,7 +37,7 @@
         function firstClick(){
             const instructions = [
                 { text: "‎", speed: 20, commands: "delay: 4, backspace, delay: 2"},
-                { text: "Happy birthday, Tiffany!!! ^_^", speed: 50, commands: "delay: 4"},
+                { text: "Happy birthday, Nase!!! ^_^", speed: 50, commands: "delay: 4"},
                 { text: "\n\nAnd yes, that was the actual code responsible for playing this MIDI music.", speed: 50, commands: "delay: 3"},
                 { text: "\nIt was also, without a doubt, me writing the code in real-time.", speed: 50, commands: "delay: 1"},
                 { text: " Absolutely.", speed: 50, commands: "delay: 1"},
@@ -69,7 +69,7 @@
         const instructions = [
             { text: "‎", speed: 1, commands: "delay: 1" },
             { text: "Oh, ", speed: 50, commands: "delay: 1" },
-            { text: "hey Tiffany!", speed: 50, commands: "delay: 2" },
+            { text: "hey Nase!", speed: 50, commands: "delay: 2" },
             { text: "\nYou're here earlier than expected.", speed: 50, commands: "delay: 2" },
             { text: "\nI haven't finished the gift quite yet...", speed: 50, commands: "delay: 2" },
             { text: "\nLet me whip something up real quick.", speed: 50, commands: "delay: 2, backspace" },
