Small change to typewriter text

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             { text: "\nYou're here earlier than expected.", speed: 50, commands: "delay: 2" },
             { text: "\nI haven't finished the gift quite yet...", speed: 50, commands: "delay: 2" },
             { text: "\nLet me whip something up real quick.", speed: 50, commands: "delay: 2, backspace" },
-            { text: code + "\n//", speed: 20, commands: "delay: 1"},
+            { text: code + "\n", speed: 20, commands: "delay: 1"},
             { text: "• ", speed: 1, commands: "delay: 2"},
             { text: "• ", speed: 1, commands: "delay: 2"},
             { text: "•", speed: 1, commands: "delay: 2, backspace: 5, delay: 1"},
-            { text: "That should do it.", speed: 50, commands: "delay: 2, clear, delay: 2"},
+            { text: "//That should do it.", speed: 50, commands: "delay: 2, clear, delay: 2"},
             { text: "Now, let's quickly add some visuals.", speed: 50, commands: "delay: 1, backspace, delay: 1"},
             { text: "<button id=\"birthday-cake\" onclick=\"cakeClick()\">\n    <img src=\"cake.svg\"> height=\"100%\"</img>\n</button>", speed: 20, commands: "delay: 2, clear, function: showCake, delay: 1"},
             { text: "There we go.", speed: 50, commands: "delay: 1"},
