--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Nase!</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" type="image/png" href="Thumbnail.png">
     
     <meta property="og:title" content="Happy Birthday Nase!">
     <meta property="og:description" content="Put this simple webpage together. ^_^ <br>I'd suggest viewing it in landscape mode, preferably on a monitor and not a small phone screen. Also maybe use Chrome or similar browsers because when I opened it in Edge it significantly slowed down the Javascript execution rate. Probably some resource-saving thing.">
