--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="Thumbnail.png">
     
     <meta property="og:title" content="Happy Birthday Nase!">
-    <meta property="og:description" content="Put this simple webpage together. ^_^ I'd suggest viewing it in landscape mode, preferably on a monitor and not a small phone screen. Also maybe use Chrome or similar browsers because when I opened it in Edge it significantly slowed down the Javascript execution rate. Probably some resource-saving thing.">
+    <meta property="og:description" content="Put this simple webpage together. ^_^ I'd suggest viewing it in landscape mode, bigger displays work best. If you page seems slow, try a different browser; some limit the JS execution speed to save resources.">
     <meta property="og:image" content="https://raw.githubusercontent.com/Brainn11/NaseBD/main/Thumbnail.png">
     <meta property="og:type" content="video.other">
 </head>
