--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" type="image/png" href="Thumbnail.png">
-    
+
+    <!-- Open Graph basics -->
     <meta property="og:title" content="Happy Birthday Nase!">
     <meta property="og:description" content="Put this simple webpage together. ^_^ I'd suggest viewing it in landscape mode, bigger displays work best. If you page seems slow, try a different browser; some limit the JS execution speed to save resources.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Brainn11/NaseBD/main/Thumbnail.png">
     <meta property="og:type" content="video.other">
+    <meta property="og:url" content="https://brainn11.github.io/NaseBD/">
+    <meta property="og:site_name" content="Brainn GitHub">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Thumbnail -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/Brainn11/NaseBD/main/Thumbnail.png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:alt" content="Birthday page preview thumbnail">
 </head>
 <body>
     <div id="notes-container"></div>
