Change Open Graph type from `video.other` to `website`
Might change it back to `video.other` later. This is to test how Discord previews the site different if set to `website`

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph basics -->
     <meta property="og:title" content="Happy Birthday Nase!">
     <meta property="og:description" content="Put this simple webpage together. ^_^ I'd suggest viewing it in landscape mode, bigger displays work best. If you page seems slow, try a different browser; some limit the JS execution speed to save resources.">
-    <meta property="og:type" content="video.other">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="https://brainn11.github.io/NaseBD/">
     <meta property="og:site_name" content="Brainn GitHub">
     <meta property="og:locale" content="en_US">
